--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -13,7 +13,7 @@
       html,
       body {
         height: 100%;
-        background: #000;
+        background-color: #0a1320;
       }
 
       body {
@@ -144,6 +144,7 @@
         overflow: hidden;
         margin-top: 80px;
       }
+
       .social-media {
         position: absolute;
         right: 20px;
@@ -164,6 +165,13 @@
         border-radius: 50%;
         background-size: contain;
         background-repeat: no-repeat;
+      }
+      video,
+      img {
+        display: block;
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
       }
 
       .bg-video {
@@ -442,7 +450,8 @@
         color: #fff;
         font-size: 13px;
         text-decoration: none;
-        transition: 0.3s;
+        transition: 1s;
+        animation: 1.5s;
       }
 
       .topbtn a:hover {
@@ -644,23 +653,23 @@
     </section>
     <section class="auto-slide">
       <div class="slide-track">
-        <img src="../images/류현진1.png" alt="" />
-        <img src="../images/노시환2.png" alt="" />
-        <img src="../images/문동주2.png" alt="" />
-        <img src="../images/채은성2.png" alt="" />
-        <img src="../images/문동주.png" alt="" />
-        <img src="../images/노시환.png" alt="" />
-        <img src="../images/류현진2.png" alt="" />
-        <img src="../images/채은성.png" alt="" />
+        <img src="../html&css/H/H1.png" alt="" />
+        <img src="../html&css/H/H2.png" alt="" />
+        <img src="../html&css/H/H3.png" alt="" />
+        <img src="../html&css/H/H4.png" alt="" />
+        <img src="../html&css/H/H5.png" alt="" />
+        <img src="../html&css/H/H6.png" alt="" />
+        <img src="../html&css/H/H7.png" alt="" />
+        <img src="../html&css/H/H8.png" alt="" />
 
-        <img src="../images/류현진1.png" alt="" />
-        <img src="../images/노시환2.png" alt="" />
-        <img src="../images/문동주2.png" alt="" />
-        <img src="../images/채은성2.png" alt="" />
-        <img src="../images/문동주.png" alt="" />
-        <img src="../images/노시환.png" alt="" />
-        <img src="../images/류현진2.png" alt="" />
-        <img src="../images/채은성.png" alt="" />
+        <img src="../html&css/H/H1.png" alt="" />
+        <img src="../html&css/H/H2.png" alt="" />
+        <img src="../html&css/H/H3.png" alt="" />
+        <img src="../html&css/H/H4.png" alt="" />
+        <img src="../html&css/H/H5.png" alt="" />
+        <img src="../html&css/H/H6.png" alt="" />
+        <img src="../html&css/H/H7.png" alt="" />
+        <img src="../html&css/H/H8.png" alt="" />
       </div>
     </section>
     <div class="gallery_btn">
@@ -671,7 +680,7 @@
     <section class="news-section">
       <div class="news-container">
         <div class="news-card">
-          <img src="../images/btn.jpg" alt="" />
+          <img src="../html&css/H/btn.jpg" alt="" />
           <p class="date">2025-10-11</p>
           <h3>
             한화이글스, 팀 스토리 담은 2025 <br />
@@ -684,7 +693,7 @@
         </div>
 
         <div class="news-card">
-          <img src="../images/btn2.jpg" alt="플레이오프 시구" />
+          <img src="../html&css/H/btn2.jpg" alt="플레이오프 시구" />
           <p class="date">2025-10-16</p>
           <h3>
             플레이오프 1차전 시구에 배우 김재욱,<br />2차전은 가수 겸 배우
@@ -697,7 +706,7 @@
         </div>
 
         <div class="news-card">
-          <img src="../images/btn3.jpg" alt="Hello Future" />
+          <img src="../html&css/H/btn3.jpg" alt="Hello Future" />
           <p class="date">2025-10-12</p>
           <h3>
             헬로 퓨쳐!(Hello Future!), 2026 한화이글스 신인선수 입단식 개최
