--- a/jquery/20251111_01.html
+++ b/jquery/20251111_01.html
@@ -18,15 +18,13 @@
         // $("#demo").on("click",function () {
         // 	console.log(i++);
         // });
-        $("#demo").on({
-      click:function(){},
-      dblclick:function});
+
           });
     </script>
   </head>
   <body>
     <div class="con1">
-      <input type="text" name="" id="" />
+      <input type="text" name="dd" id="" />
       <input type="text" name="" id="" />
     </div>
   </body>
