--- a/hanwha/sub_hanwha.html
+++ b/hanwha/sub_hanwha.html
@@ -159,83 +159,83 @@
         border-radius: 50%;
         background-size: contain;
         background-repeat: no-repeat;
-      }  footer {
-        width: 100%;
-        background: #000;
-        color: #ccc;
-        border-top: 1px solid #1a1a1a;
-        font-family: "01HanwhaB", sans-serif;
-        padding: 60px 150px;
-        box-sizing: border-box;
-      }
+      } 
+       footer {
+  width: 100%;
+  background: #000;
+  color: #ccc;
+  border-top: 1px solid #1a1a1a;
+  font-family: "01HanwhaB", sans-serif;
+  padding: 60px 150px;
+  box-sizing: border-box;
+}
 
-      .footer-inner {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-      }
+.footer-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 
-      .footer-left {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-      }
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 
-      .footer-left h1 {
-        font-size: 28px;
-        color: #fff;
-        margin-bottom: 10px;
-      }
+.footer-left h1 {
+  font-size: 28px;
+  color: #fff;
+  margin-bottom: 10px;
+}
 
-      .footer-left h1 a {
-        color: #fff;
-        text-decoration: none;
-      }
+.footer-left h1 a {
+  color: #fff;
+  text-decoration: none;
+}
 
-      .footer-info p {
-        font-size: 14px;
-        color: #999;
-        line-height: 1.6;
-        margin: 0;
-      }
+.footer-info p {
+  font-size: 14px;
+  color: #999;
+  line-height: 1.6;
+  margin: 0;
+}
 
-      .footer-info span {
-        color: #555;
-        margin: 0 8px;
-      }
+.footer-info span {
+  color: #555;
+  margin: 0 8px;
+}
 
-      .footer-menu {
-        list-style: none;
-        padding: 0;
-        margin-top: 20px;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px 20px;
-      }
+.footer-menu {
+  list-style: none;
+  padding: 0;
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 20px;
+}
 
-      .footer-menu li {
-        font-size: 14px;
-        color: #999;
-        cursor: pointer;
-        transition: color 0.3s;
-      }
+.footer-menu li {
+  font-size: 14px;
+  color: #999;
+  cursor: pointer;
+  transition: color 0.3s;
+}
 
-      .footer-menu li:hover {
-        color: #ff6600;
-      }
+.footer-menu li:hover {
+  color: #ff6600;
+}
 
-      .footer-menu li.orange {
-        color: #ff6600;
-      }
+.footer-menu li.orange {
+  color: #ff6600;
+}
 
-      .footer-right {
-        text-align: right;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 15px;
-      }
-
+.footer-right {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 15px;
+}
       .topbtn a {
         display: inline-block;
         border: 1px solid #fff;
@@ -384,6 +384,7 @@
         </li>
       </ul>
     </div>
+      <footer>
       <footer>
       <div class="footer-inner">
         <div class="footer-left">
