--- a/html&css/table3.html
+++ b/html&css/table3.html
@@ -23,7 +23,7 @@
       text-align: center;
       font-weight: bold;
       height: 200px;
-      tical-align: top;
+      tab-size: top;
     }
     table tr td:first-child {
       width: 50%;
