--- a/jquery/20251112_showhide.html
+++ b/jquery/20251112_showhide.html
@@ -11,7 +11,7 @@
       }
     </style>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="jquery-ui.min.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
     <script>
       $(function () {});
     </script>
