포트폴리오

--- a/hanwha/hanwha.html
+++ b/hanwha/hanwha.html
@@ -158,7 +158,7 @@
           <p class="desc">
             한화이글스가 포스트시즌을 앞두고 그간의 여정과 팀...
           </p>
-          <a href="#" class="readmore">READ MORE</a>
+          <a href="" class="readmore">READ MORE</a>
         </div>
 
         <div class="news-card">
