--- a/yoajung/yoajung.html
+++ b/yoajung/yoajung.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,6 +46,19 @@
         <a href="#">검색어를 입력하세요</a>
       </div>
     </div>
-    
+    <div class="con">
+      <div class="best">
+        <img src="./imags/a_13.png" alt="">
+      </div>
+      <h1>BEST MENU</h1>
+    </div>
+   <div class="swiper">
+    <img src="./imags/chzhlove.png" alt="">
+    <img src="./imags/mosld.png" alt="">
+    <img src="./imags/rmfoshffk.png" alt="">
+    <img src="./imags/rmfoshffk.png" alt="">
+    <img src="./imags/blue.png" alt="">
+   </div>
+
   </body>
 </html>
