--- a/hanwha/hanwha.html
+++ b/hanwha/hanwha.html
@@ -226,16 +226,7 @@
         </div>
       </div>
     </footer>
-    <script>
-      const sections = document.querySelectorAll("section");
-      window.addEventListener("scroll", () => {
-        sections.forEach((sec) => {
-          const rect = sec.getBoundingClientRect().top;
-          if (rect < window.innerHeight - 150) {
-            sec.classList.add("visible");
-          }
-        });
-      });
-    </script>
+    
+   <script src="./js/hanwha.js"></script>
   </body>
 </html>
