--- a/yoajung/yoajung.html
+++ b/yoajung/yoajung.html
@@ -39,7 +39,7 @@
     <div class="section">
       <div class="api">
         <img src="./imags/a_10.png" alt="" />
-        <a href="#">앱으로 바로가기</a>
+        <a href="https://play.google.com/store/apps/details?id=com.wmpoplus.yoajung&pli=1">앱으로 바로가기</a>
       </div>
       <div class="api">
         <img src="./imags/a_12.png" alt="" />
@@ -52,13 +52,47 @@
       </div>
       <h1>BEST MENU</h1>
     </div>
-   <div class="swiper">
-    <img src="./imags/chzhlove.png" alt="">
-    <img src="./imags/mosld.png" alt="">
-    <img src="./imags/rmfoshffk.png" alt="">
-    <img src="./imags/rmfoshffk.png" alt="">
-    <img src="./imags/blue.png" alt="">
-   </div>
+    <div class="best-category">
+
+  <div class="yo">
+    <a href="#" class="tab active" data-target="icecream">요거트 아이스크림</a>
+  </div>
+
+  <span class="bar">|</span>
+
+  <a href="#" class="tab" data-target="greek">그릭요거트</a>
+</div>
+   <div class="swiper-container">
+  <div class="swiper-wrapper">
+    <div class="slide"><img src="./imags/chzhlove.png" alt=""></div>
+    <div class="slide"><img src="./imags/mosld.png" alt=""></div>
+    <div class="slide"><img src="./imags/rmfoshffk.png" alt=""></div>
+    <div class="slide"><img src="./imags/melon.png" alt=""></div>
+    <div class="slide"><img src="./imags/blue.png" alt=""></div>
+    <div class="slide"><img src="./imags/ozamon.png" alt=""></div>
+    <div class="slide"><img src="./imags/tozha.png" alt=""></div>
+    <div class="slide"><img src="./imags/PPDD.png" alt=""></div>
+
+
+    
+   <div class="slide"><img src="./imags/reek_1.png" alt=""></div>
+    <div class="slide"><img src="./imags/reek_2.png" alt=""></div>
+    <div class="slide"><img src="./imags/reek_3.png" alt=""></div>
+    <div class="slide"><img src="./imags/reek_4.png" alt=""></div>
+
+
+
+
+  </div>
+</div>
+<div class=""></div>
+
+
+<script src="./js/yoajunh.js">
+
+
+</script>
+
 
   </body>
 </html>
