--- a/hanwha/index.html
+++ b/hanwha/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hanwha</title>
-    <link rel="stylesheet" href="hanwhacss/hanwha.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <style></style>
   </head>
 
@@ -227,6 +227,6 @@
       </div>
     </footer>
     
-   <script src="./js/hanwha.js"></script>
+   <script src="./js/index.js"></script>
   </body>
 </html>
