--- a/portfolio/hanwha/index.html
+++ b/portfolio/hanwha/index.html
@@ -25,7 +25,7 @@
             <a href="#">EAGLES</a>
             <ul class="submenu">
               <li>
-                <a href="../html&css/한화이글스클론페이지2.html">구단소개</a>
+                <a href="./sub_index.html">구단소개</a>
               </li>
               <li><a href="#">그룹사소개</a></li>
               <li><a href="#">HISTORY</a></li>
