--- a/portfolio/yoajung/index.html
+++ b/portfolio/yoajung/index.html
@@ -164,6 +164,7 @@
       </div>
       <div class="last_menu3">
         <h1>01</h1>
+
         <h2>요아정은 하와이 최대 쇼핑몰</h2>
         <h1>
           <strong
@@ -171,22 +172,84 @@
           >
         </h1>
         <h1>02</h1>
-        <p>ㅡ</p>
+
         <h2>
           현재 미국, 홍콩, 중국,<br />
           일본, 호주, 싱가포르<br />
-          해외 6개국으로 사업을 확장하며<br />
-          글로벌 디저트 브랜드로<br />
-          성장하고 있습니다.
+          <strong>
+            해외 6개국으로 사업을 확장하며<br />
+            글로벌 디저트 브랜드로<br />
+            성장하고 있습니다.
+          </strong>
         </h2>
       </div>
     </div>
-    <div class="SNS_grid">
+    <div class="sns_rap">
       <div class="SNS">
-        <p><img src="./imags/a_13.png" alt="" /></p>
-        <h1>SNS</h1>
+        <div>
+          <p><img src="./imags/a_13.png" alt="" /></p>
+          <h1>SNS</h1>
+        </div>
+        <p>@yoajung_official</p>
+      </div>
+      <div class="SNS_flex">
+        <div class="flex">
+          <p><img src="./imags/sweet.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/inchina.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags//food.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/korea.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/Rnf.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/qksrkq.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/school.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/1111event.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/qjsrjq2.jpg" alt="" /></p>
+        </div>
+        <div class="flex">
+          <p><img src="./imags/lk.jpg" alt="" /></p>
+        </div>
       </div>
     </div>
+    <footer>
+      <div class="foot">
+        <div class="top">
+          <p>
+            <img src="./imags/footer_01.png" alt="" />
+          </p>
+        </div>
+        <div class="bottom">
+          <div class="compamy">
+            <p>주식회사 요아정</p>
+            <p>대표자 박현희</p>
+            <p>사업자번호 696-86-02195</p>
+            <p>주소 서울특별시 성동구 아차산로17길 48 1201-5호</p>
+          </div>
+          <div class="cs">
+            <p>제휴문의 yoajung@yoajung.co.kr</p>
+            <p>CS문의 cs@yoajung.co.kr6</p>
+            <p>대표전화 1551-8106</p>
+          </div>
+          <div>상담시간 평일 10시~19시(점심시간 12:30~13:30)</div>
+          <p>Copyright ⓒ 요아정. all Rights Reserved.</p>
+          <p>DESIGNED BY VWEB.</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/index.js"></script>
