--- a/portfolio/hanwha/index.html
+++ b/portfolio/hanwha/index.html
@@ -69,6 +69,7 @@
       </div>
 
       <div class="right-menu">
+        <a href="#">광고문의</a>
         <a href="https://www.hanwhaeagles.co.kr/resources/vr/index.html"
           >좌석뷰 확인하기</a
         >
@@ -162,26 +163,24 @@
         </div>
 
         <div class="news-card">
-          <img src="./images/btn2.jpg" alt="플레이오프 시구" />
-          <p class="date">2025-10-16</p>
+          <img src="./images/ghavpdlwl.png" alt="플레이오프 시구" />
+          <p class="date">2025-11-19</p>
           <h3>
-            플레이오프 1차전 시구에 배우 김재욱,<br />2차전은 가수 겸 배우
-            권유리
+            2026년도 한화이글스 모바일 앱 운영 대행<br />
+            업체 입찰 공고
           </h3>
           <p class="desc">
-            한화이글스는 배우 김재욱과 가수 겸 배우 권유리를...
+            가.공고명: 2026년 한화이글스 모바일 앱 운영 대행 나.
           </p>
           <a href="#" class="readmore">READ MORE</a>
         </div>
 
         <div class="news-card">
-          <img src="./images/btn3.jpg" alt="Hello Future" />
-          <p class="date">2025-10-12</p>
-          <h3>
-            헬로 퓨쳐!(Hello Future!), 2026 한화이글스 신인선수 입단식 개최
-          </h3>
+          <img src="./images/40wnsus.jpg" alt="Hello Future" />
+          <p class="date">2025-11-13</p>
+          <h3>한화이글스, 창단 40주년 기념 불꽃행사</h3>
           <p class="desc">
-            "새벽훈련을 위해 일어났을 때 하루도 거르지 않고 항상..."
+            한화이글스가 창단 40주년 기념 불꽃행사를 30일 대전시
           </p>
           <a href="#" class="readmore">READ MORE</a>
         </div>
@@ -226,7 +225,7 @@
         </div>
       </div>
     </footer>
-    
-   <script src="./js/index.js"></script>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
